@@ -1,8 +1,7 @@
 
-R Under development (unstable) (2012-10-07 r60893) -- "Unsuffered Consequences"
-Copyright (C) 2012 The R Foundation for Statistical Computing
-ISBN 3-900051-07-0
-Platform: i686-pc-linux-gnu (32-bit)
+R version 3.0.0 (2013-04-03) -- "Masked Marvel"
+Copyright (C) 2013 The R Foundation for Statistical Computing
+Platform: x86_64-unknown-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -26,7 +25,7 @@ Loading required package: mvtnorm
 Loading required package: survival
 Loading required package: splines
 > 
-> assign(".oldSearch", search(), pos = 'CheckExEnv')
+> base::assign(".oldSearch", base::search(), pos = 'CheckExEnv')
 > cleanEx()
 > nameEx("cftest")
 > ### * cftest
@@ -62,11 +61,11 @@ Coefficients:
 (Intercept) -17.5791     6.7584  -2.601   0.0123 *  
 speed         3.9324     0.4155   9.464 1.49e-12 ***
 ---
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 
 Residual standard error: 15.38 on 48 degrees of freedom
-Multiple R-squared: 0.6511,	Adjusted R-squared: 0.6438 
-F-statistic: 89.57 on 1 and 48 DF,  p-value: 1.49e-12 
+Multiple R-squared:  0.6511,	Adjusted R-squared:  0.6438 
+F-statistic: 89.57 on 1 and 48 DF,  p-value: 1.49e-12
 
 >   cftest(lmod)
 
@@ -79,7 +78,7 @@ Linear Hypotheses:
 (Intercept) == 0 -17.5791     6.7584  -2.601   0.0123 *  
 speed == 0         3.9324     0.4155   9.464 1.49e-12 ***
 ---
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 (Univariate p values reported)
 
 >   
@@ -130,7 +129,7 @@ drugD - 4times == 0     2.986      1.443   2.069 0.044316 *
 drugE - 4times == 0     8.573      1.443   5.939 3.84e-07 ***
 drugE - drugD == 0      5.586      1.443   3.870 0.000348 ***
 ---
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 (Univariate p values reported)
 
 >   summary(cht, test = adjusted("Shaffer"))
@@ -155,7 +154,7 @@ drugD - 4times == 0     2.986      1.443   2.069 0.044316 *
 drugE - 4times == 0     8.573      1.443   5.939 1.54e-06 ***
 drugE - drugD == 0      5.586      1.443   3.870 0.000697 ***
 ---
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 (Adjusted p values reported -- Shaffer method)
 
 >   summary(cht, test = adjusted("Westfall"))
@@ -180,7 +179,7 @@ drugD - 4times == 0     2.986      1.443   2.069   0.0443 *
 drugE - 4times == 0     8.573      1.443   5.939   <0.001 ***
 drugE - drugD == 0      5.586      1.443   3.870   <0.001 ***
 ---
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 (Adjusted p values reported -- Westfall method)
 
 > 
@@ -211,7 +210,7 @@ Linear Hypotheses:
 D - test == 0         -21.009      3.536  -5.942   <0.001 ***
 E - test == 0         -31.338      3.536  -8.864   <0.001 ***
 ---
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 (Adjusted p values reported -- Westfall method)
 
 > 
@@ -514,7 +513,7 @@ D - C == 0  -1.4000     0.8679  -1.613 0.126291
 E - C == 0  -7.9333     0.8679  -9.140 9.45e-08 ***
 E - D == 0  -6.5333     0.8679  -7.527 1.21e-06 ***
 ---
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 (Univariate p values reported)
 
 >   summary(dht, test = adjusted("Shaffer"))
@@ -533,13 +532,13 @@ C - A == 0   3.6000     0.8679   4.148 0.003028 **
 D - A == 0   2.2000     0.8679   2.535 0.044149 *  
 E - A == 0  -4.3333     0.8679  -4.993 0.000531 ***
 C - B == 0   5.7333     0.8679   6.606 3.63e-05 ***
-D - B == 0   4.3333     0.8679   4.993 0.000398 ***
+D - B == 0   4.3333     0.8679   4.993 0.000531 ***
 E - B == 0  -2.2000     0.8679  -2.535 0.044149 *  
 D - C == 0  -1.4000     0.8679  -1.613 0.126291    
 E - C == 0  -7.9333     0.8679  -9.140 9.45e-07 ***
 E - D == 0  -6.5333     0.8679  -7.527 7.26e-06 ***
 ---
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 (Adjusted p values reported -- Shaffer method)
 
 >   summary(dht, test = adjusted("Westfall"))
@@ -564,7 +563,7 @@ D - C == 0  -1.4000     0.8679  -1.613  0.12629
 E - C == 0  -7.9333     0.8679  -9.140  < 0.001 ***
 E - D == 0  -6.5333     0.8679  -7.527  < 0.001 ***
 ---
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 (Adjusted p values reported -- Westfall method)
 
 > 
@@ -820,7 +819,7 @@ M - L >= 0  -10.000      3.872  -2.582 0.0232 *
 L - H >= 0   14.722      3.872   3.802 1.0000  
 M - H >= 0    4.722      3.872   1.219 1.0000  
 ---
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 (Adjusted p values reported -- single-step method)
 
 > 
@@ -876,7 +875,7 @@ otrend >= 0     -3.4821     2.0867  -1.669 0.04988 *
 atrend >= 0   -314.7324   408.9901  -0.770 0.22212   
 ltrend >= 0     -1.9400     0.9616  -2.018 0.02379 * 
 ---
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 (Univariate p values reported)
 
 >   summary(Kht, test = adjusted("bonferroni"))
@@ -900,7 +899,7 @@ otrend >= 0     -3.4821     2.0867  -1.669 0.4490
 atrend >= 0   -314.7324   408.9901  -0.770 1.0000  
 ltrend >= 0     -1.9400     0.9616  -2.018 0.2141  
 ---
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 (Adjusted p values reported -- bonferroni method)
 
 >   summary(Kht, test = adjusted("Shaffer"))
@@ -924,7 +923,7 @@ otrend >= 0     -3.4821     2.0867  -1.669 0.0998 .
 atrend >= 0   -314.7324   408.9901  -0.770 0.4442  
 ltrend >= 0     -1.9400     0.9616  -2.018 0.0518 .
 ---
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 (Adjusted p values reported -- Shaffer method)
 
 >   summary(Kht, test = adjusted("Westfall"))
@@ -948,7 +947,7 @@ otrend >= 0     -3.4821     2.0867  -1.669 0.0917 .
 atrend >= 0   -314.7324   408.9901  -0.770 0.3951  
 ltrend >= 0     -1.9400     0.9616  -2.018 0.0459 *
 ---
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 (Adjusted p values reported -- Westfall method)
 
 >   summary(Kht, test = adjusted("single-step"))
@@ -968,11 +967,11 @@ Linear Hypotheses:
 50 - 5 >= 0      1.0615     1.3973   0.760 0.9999  
 500 - 5 >= 0     0.6772     1.3394   0.506 0.9987  
 500 - 50 >= 0   -0.3844     1.4510  -0.265 0.8908  
-otrend >= 0     -3.4821     2.0867  -1.669 0.2182  
-atrend >= 0   -314.7324   408.9901  -0.770 0.6621  
+otrend >= 0     -3.4821     2.0867  -1.669 0.2185  
+atrend >= 0   -314.7324   408.9901  -0.770 0.6625  
 ltrend >= 0     -1.9400     0.9616  -2.018 0.1157  
 ---
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 (Adjusted p values reported -- single-step method)
 
 > 
@@ -1052,7 +1051,7 @@ M - L == 0  -10.000      3.872  -2.582  0.03370 *
 H - L == 0  -14.722      3.872  -3.802  0.00115 **
 H - M == 0   -4.722      3.872  -1.219  0.44743   
 ---
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 (Adjusted p values reported -- single-step method)
 
 > 
@@ -1117,7 +1116,7 @@ Linear Hypotheses:
 1 == 0  -1.0691     0.4293  -2.490   0.0253 *
 2 == 0   0.3677     0.1360   2.703   0.0137 *
 ---
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 (Adjusted p values reported -- single-step method)
 
 > 
@@ -1536,7 +1535,7 @@ envir: env4 - env3 == 0     2.475      1.084   2.283    0.337
 envir: env5 - env3 == 0     2.330      1.084   2.150    0.337  
 envir: env5 - env4 == 0    -0.145      1.084  -0.134    1.000  
 ---
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 (Adjusted p values reported -- Shaffer method)
 
 > 
@@ -1545,8 +1544,8 @@ Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’
 > 
 > ### * <FOOTER>
 > ###
-> cat("Time elapsed: ", proc.time() - get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  15.556 0.316 15.904 0 0 
+> base::cat("Time elapsed: ", proc.time() - base::get("ptime", pos = 'CheckExEnv'),"\n")
+Time elapsed:  17.237 0.312 17.614 0 0 
 > grDevices::dev.off()
 null device 
           1 
