@@ -1,8 +1,7 @@
 
-R version 2.15.3 (2013-03-01) -- "Security Blanket"
+R version 3.0.0 (2013-04-03) -- "Masked Marvel"
 Copyright (C) 2013 The R Foundation for Statistical Computing
-ISBN 3-900051-07-0
-Platform: i686-pc-linux-gnu (32-bit)
+Platform: x86_64-unknown-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -102,7 +101,7 @@ function (type = c("univariate", "adjusted", p.adjust.methods),
     }
     return(p.adjust(pvals, method = type))
 }
-<environment: 0x8e34cec>
+<environment: 0x26ce208>
 
 $qfunction
 function (conf.level, adjusted = TRUE, ...) 
@@ -121,7 +120,7 @@ function (conf.level, adjusted = TRUE, ...)
     attr(ret, "error") <- calpha$estim.prec
     return(ret)
 }
-<environment: 0x8e34cec>
+<environment: 0x26ce208>
 
 $coefficients
  2times - 1time  4times - 1time   drugD - 1time   drugE - 1time 4times - 2times 
@@ -142,8 +141,8 @@ $tstat
        4.251282        8.121617        2.069031        5.939366        3.870335 
 
 $pvalues
- [1] 1.380883e-01 3.524764e-04 9.394029e-07 2.897682e-14 2.050268e-01
- [6] 9.917862e-04 6.540450e-10 2.512705e-01 3.447725e-06 3.042641e-03
+ [1] 1.380883e-01 3.524764e-04 3.563710e-07 2.897682e-14 2.050268e-01
+ [6] 9.917862e-04 6.540452e-10 2.512705e-01 3.447725e-06 3.042641e-03
 attr(,"error")
 [1] 0.0001910665
 
@@ -181,7 +180,7 @@ b - a == 0   -5.833
 Warning messages:
 1: In mcp2matrix(model, linfct = linfct) :
   covariate interactions found -- default contrast might be inappropriate
-2: In glht.matrix(model = list(coefficients = c(14.4166666666667, -5.83333333333333,  :
+2: In glht.matrix(model = list(coefficients = c(14.4166666666667, -5.83333333333334,  :
   6 out of 19 coefficients not estimable in 'model'
 > try(glht(tmp.aov, linfct=mcp(FF="Tukey")))
 
@@ -199,7 +198,7 @@ E - D == 0      4.5
 Warning messages:
 1: In mcp2matrix(model, linfct = linfct) :
   covariate interactions found -- default contrast might be inappropriate
-2: In glht.matrix(model = list(coefficients = c(14.4166666666667, -5.83333333333333,  :
+2: In glht.matrix(model = list(coefficients = c(14.4166666666667, -5.83333333333334,  :
   6 out of 19 coefficients not estimable in 'model'
 > glht(tmp.aov, linfct=mcp(GG="Tukey"))
 
@@ -220,7 +219,7 @@ i - h == 0     -5.0
 Warning messages:
 1: In mcp2matrix(model, linfct = linfct) :
   covariate interactions found -- default contrast might be inappropriate
-2: In glht.matrix(model = list(coefficients = c(14.4166666666667, -5.83333333333333,  :
+2: In glht.matrix(model = list(coefficients = c(14.4166666666667, -5.83333333333334,  :
   6 out of 19 coefficients not estimable in 'model'
 > 
 > ### covariate interactions: fire a warning
@@ -415,6 +414,13 @@ Linear Hypotheses:
 > lf <- glht(lm(y ~ f : f2 - 1, data = dat), 'f1:f21 - f2:f22 = 0')$linfct
 > stopifnot(all.equal(max(abs(lf - c(1, 0, 0, -1, 0, 0))), 0))
 > 
+> ### plotting one-sided confidence intervals
+> amod <- aov(breaks ~ wool + tension, data = warpbreaks)
+> wht <- glht(amod, linfct = mcp(tension = "Tukey"), alternative="greater")
+> plot(wht, xlim=c(-30, 30), main="right side was missing")
+> wht <- glht(amod, linfct = mcp(tension = "Tukey"), alternative="less")
+> plot(wht, xlim=c(-40, 20), main="left side was missing")
+> 
 > proc.time()
    user  system elapsed 
-  1.196   0.084   1.274 
+  1.800   0.088   1.886 
